--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,3 +163,22 @@ body{
     src: url(../font/material-symbol-rounded.woff2) format('woff2');
 }
 
+.m-icon{
+    font-family: Material Symbols Rounded;
+    font-weight: normal;
+    font-size: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    word-spacing: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    font-feature-settings: "liga";
+    -webkit-font-feature-settings: liga;
+    -webkit-font-feature-settings: "liga";
+    -webkit-font-smoothing:antialiased ;
+    height: 1em;
+    width: 1em;
+    overflow: hidden;
+}
+
