--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -456,3 +456,78 @@ position: relative;
 
 /* MAIN */
 
+  main{
+    height: calc(100vh - 80px);
+    height: calc(100svh - 80px);
+    overflow: hidden;
+  }
+
+  article.container{
+    position: relative;
+    display: grid;
+    grid-template-columns: minmax(0, 1fr);
+    gap: 20px;
+    height: 100%;
+    overflow: auto;
+    overflow: overlay;
+  }
+
+  article.container::-webkit-scrollbar-thumb{
+    background-color: transparent;
+  }
+
+  article.container:is(:hover, :focus-within)::-webkit-scrollbar-thumb{
+    background-color: var(--white-alpha-8);
+  }
+
+  article.container::-webkit-scrollbar-button{height: 10px;}
+
+  article::before{
+    content: "";
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    background-image: var(--gradient-1);
+    pointer-events: none;
+    z-index: 1;
+  }
+
+  .section:not(:last-child){margin-block-end: 16px;}
+
+  /* CURRENT WEATHER */
+
+  .current-weather-card .wrapper{
+    margin-block: 12px;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+  }
+
+  .current-weather-card .weather-icon{
+    margin-inline: auto;
+  }
+
+  .current-weather-card > .body-3{
+    text-transform: capitalize;
+  }
+
+  .current-weather-card .meta-list{
+    margin-block-start: 16px;
+    padding-block-start: 16px;
+    border-block-start: 1px solid var(--outline);
+  }
+
+  .current-weather-card .meta-item{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .current-weather-card .meta-item:not(:last-child){    
+    margin-block-end: 12px;  
+  }
+
+  .current-weather-card .meta-text{
+    color: var(--on-surface-variant);
+  }
