--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,6 +489,7 @@ position: relative;
     content: "";
     position: fixed;
     bottom: 0;
+    left: 0;
     width: 100%;
     height: 40px;
     background-image: var(--gradient-1);
@@ -666,4 +667,45 @@ position: relative;
 
  .highlight-card.two .label-1{
     margin-block-end: 4px;
+ }
+
+ /* FORECAST */
+
+ .slider-container{
+  overflow-x: auto;
+  margin-inline: -16px;
+ }
+
+ .slider-container::-webkit-scrollbar{
+  display: none;
+ }
+
+ .slider-list{
+  display: flex;
+  gap: 12px;
+ }
+
+ .slider-list:first-child{
+  margin-block-end: 16px;
+ }
+
+ .slider-list::before,
+ .slider-list::after{
+  content: "";
+  min-width: 4px;
+ }
+
+ .slider-item{
+  min-width: 110px;
+  flex: 1 1 100%;
+ }
+
+
+ .slider-card{
+  text-align: center;
+ }
+
+ .slider-item .weather-icon{
+  margin-inline: auto;
+  margin-block: 12px;
  }
