--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -783,5 +783,97 @@ position: relative;
   margin-block-start: 20px;
  }
 
-
+/* MEDIA QUERIES */
   
+/* responsive for large than 768px screen */
+
+@media (min-width: 768px) {
+
+  .container{
+    padding: 24px;
+  }
+  .title-1{
+    --title-1:2.4rem;
+  }
+
+  .section > .title-2{margin-block-end: 16px;}
+
+  .card-lg{padding: 24px;}
+
+  .card-sm{
+    padding: 20px;
+    display: grid;
+    grid-template-columns: min-content 1fr;
+  }
+
+  .badge{
+    top: 20px;
+    right: 20px;
+  }
+
+  .header-actions{gap: 24px;}
+
+  .header .btn-primary{
+    padding-inline: 16px 24px;
+  }
+
+  .header .btn-primary .span{display: block;}
+
+  .search-view{clip-path: circle(3% at calc(100% - 273px) 6%);}
+
+  main{
+    height: calc(100vh - 96px);
+    height: calc(100svh - 96px);
+  }
+
+  article.container{
+    padding-block-start: 0;
+    grid-template-columns: 280px minmax(0, 1fr);
+    align-items: flex-start;
+    gap: 24px;
+  }
+
+  .content-left{
+    position: sticky;
+    top: 0;
+  }
+
+  .section:not(:last-child){
+    margin-block-end: 20px;
+  }
+
+  .forecast-card .card-item:not(:last-child){
+    margin-block-end: 16px;
+  }
+
+  .highlight-list{
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .highlight-card:nth-child(-n+2){
+    grid-column: span 2;
+    height: 160px;
+  }
+
+  .highlight-card:nth-child(n+3){height: 120px;}
+
+  .highlights .m-icon{font-size: 3.6rem;}
+
+  .highlight-card.one .card-item{
+    width: 25%;
+    flex-direction: column-reverse;
+    gap: 8px;
+  }
+
+  .slider-container{
+    margin-inline: 0 -24px;
+    border-bottom-left-radius: var(--radius-16);
+    border-top-left-radius: var(--radius-16);
+  }
+
+  .slider-list::before{display: none;}
+
+  .slider-list::after{min-width: 12px;}
+
+  .hourly-forecast .card-sm{padding: 16px;}
+}
