--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -877,3 +877,104 @@ position: relative;
 
   .hourly-forecast .card-sm{padding: 16px;}
 }
+
+
+@media (min-width: 1200px){
+  :root{
+    --heading:8rem;
+    --title-2:2rem;
+  }
+
+  .container{padding: 40px;}
+
+  .card-lg{padding: 36px;}
+
+  .card-sm{padding: 2px;}
+  
+  .title-1{--title-1:3.6rem;}
+
+  .highlight-card.two .card-item{
+    column-gap: 24px;
+  }
+
+  .header .icon-btn{display: none;}
+
+  .logo img{
+    width: 200px;
+  }
+
+  .header{
+    position: relative;
+    height: 12px;
+    z-index: 4;
+  }
+
+  .header .container{
+    padding-block: 0;
+    height: 100%;
+  }
+
+  .search-view,
+  .search-view.active{
+    all: block;
+    position: relative;
+    width: 500px;
+    animation: none;
+  }
+
+  .search-wrapper{border-block-end: none;}
+
+  .search-wrapper > .m-icon{display: block;}
+
+  .search-field,
+  .search-view .view-list{
+    background-color: var(--on-surface);
+  }
+
+  .search-field{
+    height: 56px;
+    border-radius: var(--radius-28);
+  }
+
+  .search-result,
+  .search-view:not(:focus-within) .search-result{
+    display: none;
+  }
+
+  .search-view:focus-within .search-result.active{
+    display: block;
+  }
+
+  .search-view:has(.search-result.active):focus-within .search-field{
+    border-bottom-left-radius:0 ;
+    border-bottom-right-radius:0 ;
+  }
+
+  .search-view .view-list{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    max-height: 360px;
+    border-radius: 0 0 var(--radius-28) var(--radius-28);
+    border-block-start: 1px solid var(--outline);
+    overflow-y: auto;
+    overflow-y: overlay;
+  }
+
+  .search-view .view-list:empty{
+    min-height: 120px;
+  }
+
+  .search-view .view-list::-webkit-scrollbar-button{height: 20px;}
+
+  .search-view:is(:hover, :has(.view-list):hover ){
+    filter: drop-shadow(var(--shadow-1));
+  }
+
+  .search-view:is(:focus-within, :has(.view-list):focus-within){
+    filter: drop-shadow(var(--shadow-2));
+  }
+
+  
+}
