--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -575,7 +575,7 @@ position: relative;
   }
 
   .highlight-list{
-    display: grid;
+    display:grid;
     gap: 20px;
   }
 
@@ -802,8 +802,8 @@ position: relative;
 
   .card-sm{
     padding: 20px;
-    display: grid;
-    grid-template-columns: min-content 1fr;
+   
+  
   }
 
   .badge{
@@ -916,7 +916,8 @@ position: relative;
 
   .search-view,
   .search-view.active{
-    all: block;
+    all: unset;
+    display: block;
     position: relative;
     width: 500px;
     animation: none;
@@ -976,5 +977,39 @@ position: relative;
     filter: drop-shadow(var(--shadow-2));
   }
 
-  
+  main{
+    height: calc(100vh - 120px);
+    height: calc(100svh - 120px);
+  }
+
+  article.container{
+    grid-template-columns: 360px minmax(0, 1fr);
+    gap: 40px;
+  }
+
+  .current-weather .weather-icon{width: 80px;}
+
+  .forecast-card .title-2{ --title-2: 2.2rem;}
+
+  .highlight-card:nth-child(-n+2){
+    height: 200px;
+  }
+
+  .highlight-card:nth-child(n+3){
+    height: 150px;
+  }
+
+  .highlight-card.m-icon {font-size: 4.8rem;}
+
+  .slider-list {gap: 16px;}
+}
+
+@media (min-width: 1400px){
+  .highlight-list{
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+.highlight-card .title-3{
+  margin: 1rem;
+}
 }
