--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -927,8 +927,7 @@ position: relative;
 
   .search-wrapper > .m-icon{display: block;}
 
-  .search-field,
-  .search-view .view-list{
+  .search-field,.search-view .view-list{
     background-color: var(--on-surface);
   }
 
@@ -1009,7 +1008,4 @@ position: relative;
     grid-template-columns: repeat(4, 1fr);
   }
 
-.highlight-card .title-3{
-  margin: 1rem;
-}
 }
